--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -52,15 +52,32 @@
                     </div>
                     <div class="form-group ">
                         <div class="col-4">
-                            <input name="AreChecked" type="checkbox" value="0" checked /> Difference in body weight<br />
-                            <input name="AreChecked" type="checkbox" value="1" checked /> Weight gain from start<br />
-                            <input name="AreChecked" type="checkbox" value="2" checked /> Average weight gain<br />
-                            <input name="AreChecked" type="checkbox" value="3" checked /> Weight gain from last survey<br />
-                            <input name="AreChecked" type="checkbox" value="4" checked /> Average weight gain from last survey<br />
-                            <input name="AreChecked" type="checkbox" value="5" checked /> Loculus feed intake<br />
-                            <input name="AreChecked" type="checkbox" value="6" checked /> Feed Intake Weekly<br />
-                            <input name="AreChecked" type="checkbox" value="7" checked /> FeedIntakDaily<br />
-                            <input name="AreChecked" type="checkbox" value="8" checked /> Feed Conversion Ratio<br />
+                            <div class="accordion accordion-flush" id="accordionFlush">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="flush-headingOne">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                            Show or hide table row
+                                        </button>
+                                    </h2>
+                                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlush">
+                                        <div class="accordion-body">
+                                            @{
+                                                List<string> CheckBoxName = new List<string>() { "Difference in body weight"," Weight gain from start","Average weight gain","Weight gain from last survey","" +
+                                                "Average weight gain from last survey","Loculus feed intake","Feed Intake Weekly","FeedIntakDaily","Feed Conversion Ratio"};
+                                                for (int i = 0; i < CheckBoxName.Count; i++)
+                                                {
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" name="AreChecked" type="checkbox" value="@i" @((char)Model.VisibleProperties[i] == '1' ? "checked" : "") />
+                                                        <label class="form-check-label"> @CheckBoxName[i] </label>
+                                                    </div>
+
+                                                }
+                                            }
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -75,8 +92,8 @@
                     </div>
 
                 </div>
+            </div>
         </div>
-    </div>
 </form>
 @section Scripts {
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
