--- a/FermaOnline/Views/Survey/Create.cshtml
+++ b/FermaOnline/Views/Survey/Create.cshtml
@@ -86,8 +86,15 @@
 
 
                             function updateDayValue() {
-                           
-                                if (WeightValue && QuantityValue) {
+
+                                var check = 0;
+
+                                for (var i = 0; i < cageNumber; i++)
+                                    if (WeightValue[i] > 0 && QuantityValue[i] > 0)
+                                        check++;
+                              
+
+                                if (check == cageNumber) {  
 
                                     var WeightValueSum = 0;
                                     var QuantityValueSum = 0;
@@ -99,15 +106,12 @@
 
                                     for (let i = 0; i < QuantityValue.length; i++) {
                                         QuantityValueSum +=  QuantityValue[i];
-                                       
                                     }
 
-                                   
                                     var IndyvidualBodyWeight = WeightValueSum / QuantityValueSum;
  
                                     var ClosestValue = 0;
                                     var smallestDiff = Math.abs(IndyvidualBodyWeight - DictValue[0]);
-
 
                                     for (i = 1; i < DictValue.length; i++) {
                                         currentDiff = Math.abs(IndyvidualBodyWeight - DictValue[i]);
@@ -119,7 +123,7 @@
 
                                     DayValue = DictKey[ClosestValue];
 
-                                    Day.placeholder = DayValue;
+                                    Day.placeholder = "suggested value: " + DayValue;
                                 }
                                 else
                                     Day.placeholder = "";
