--- a/FermaOnline/Views/Experiment/Index.cshtml
+++ b/FermaOnline/Views/Experiment/Index.cshtml
@@ -8,7 +8,37 @@
         <div class="col-6 text-right">
             <a type="button" class="btn btn-primary" asp-controller="Experiment" asp-action="Create">Add experiment</a>
         </div>
-  
+        <form method="post" enctype="multipart/form-data" asp-action="UpdateTable">
+            <div class="form-group ">
+                <div class="col-4">
+                    <div class="accordion accordion-flush" id="accordionFlush">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                   Add filtrs 
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlush">
+                                <div class="accordion-body">
+                                    @{
+                                        List<string> CheckBoxName = new List<string>() { "Active", "Inactive","All","Pig"," Poultry", "Ruminants" };
+                                        for (int i = 0; i < CheckBoxName.Count; i++)
+                                        {
+                                                                        <div class="form-check">
+                                                                            <input class="form-check-input" name="AreChecked" type="checkbox" value="@CheckBoxName[i]" />   <!-- ((char)Model.VisibleProperties[i] == '1' ? "checked" : "") -->
+                                                                            <label class="form-check-label"> @CheckBoxName[i] </label>
+                                                                        </div>
+                                        }
+                                    }
+                                    <input type="submit" class="btn btn-primary w-75" value="Show" />
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </form>
 
     </div>
     <br />
