--- a/FermaOnline/Views/Experiment/Show.cshtml
+++ b/FermaOnline/Views/Experiment/Show.cshtml
@@ -333,7 +333,7 @@
                   @foreach (var survey in Model.SurveysList)
                   {
                      @: Days.push(@survey.DayOfLife);
-                     @: Weight.push(parseFloat(@dict[@survey.DayOfLife])); //trzeba coś wymyślić bo robi tu int zamiast float
+                     @: Weight.push(parseFloat(@dict[(int)@survey.DayOfLife])); //trzeba coś wymyślić bo robi tu int zamiast float
                    }
 
         }
