--- a/FermaOnline/Views/Experiment/Create.cshtml
+++ b/FermaOnline/Views/Experiment/Create.cshtml
@@ -1,6 +1,5 @@
 ﻿@model Experiment
 
-
 <form method="post" asp-action="Create">
     <div class="border p-3">
         <div class="form-group row">
@@ -13,30 +12,35 @@
                     <div class="col-4">
                         <label asp-for="Name"></label>
                         <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Author"></label>
                         <input asp-for="Author" class="form-control" />
+                        <span asp-validation-for="Author" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="ShortDescription"></label> <br />
                         <textarea class="form-control" asp-for="ShortDescription" rows="3"></textarea>
+                        <span asp-validation-for="ShortDescription" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Description"></label> <br />
                         <textarea class="form-control" asp-for="Description" rows="3"></textarea>
+                        <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="CageNumber"></label> <br />
                         <input class="form-control" asp-for="CageNumber">
+                        <span asp-validation-for="CageNumber" class="text-danger"></span>
                     </div>
                 </div>
 
@@ -46,6 +50,7 @@
                         <input type="radio" asp-for="Species" value="Pig" />Pig<br />
                         <input type="radio" asp-for="Species" value="Poultry" />Poultry<br />
                         <input type="radio" asp-for="Species" value="Ruminants" />Ruminants<br />
+                        <span asp-validation-for="Species" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group row">
