--- a/FermaOnline/Views/Survey/Create.cshtml
+++ b/FermaOnline/Views/Survey/Create.cshtml
@@ -15,11 +15,15 @@
                     <label asp-for="SurveyDate"></label>
                     <div class="col-sm-10">
                         <input asp-for="SurveyDate" class=".form-control " />
+                        <span asp-validation-for="SurveyDate" class="text-danger"></span>
+
                     </div>
                     <div class="mb-3 row">
                         <label asp-for="LoculusQuantity"></label>
                         <div class="col-sm-10">
                             <input asp-for="LoculusQuantity" class="form-control " />
+                            <span asp-validation-for="LoculusQuantity" class="text-danger"></span>
+
                         </div>
                     </div>
                     @{int count = 0;
@@ -30,6 +34,8 @@
                                 <label asp-for="@Model.Cages[i].CageQuantity">@alphabet[count] cage quantity</label>
                                 <div class="col-sm-10">
                                     <input asp-for="@Model.Cages[i].CageQuantity" id="@alphabet[count]Quantity" class="form-control " />
+                                    <span asp-validation-for="Cages[i].CageQuantity" class="text-danger"></span>
+
                                 </div>
                             </div>
                             <div class="mb-3 row">
@@ -41,7 +47,7 @@
                             count++;
                         }
                     }
-                    @if (ViewBag.IsFirstSurvay)
+                    @if (ViewBag.IsFirstSurvay == true)
                     {
                         <div class="mb-3 row">
                             <label asp-for="DayOfLife"></label>
@@ -94,6 +100,8 @@
                             <label asp-for="LoculusFeedInTake"></label>
                             <div class="col-sm-10">
                                 <input asp-for="LoculusFeedInTake" class="form-control" />
+                                <span asp-validation-for="LoculusFeedInTake" class="text-danger"></span>
+
                             </div>
                         </div>
                     }
