--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -1,6 +1,5 @@
 ﻿@model Experiment
 
-
 <form method="post" enctype="multipart/form-data" asp-action="Update">
     <input asp-for="Id" hidden />
     <div class="border p-3">
@@ -63,14 +62,13 @@
                                         <div class="accordion-body">
                                             @{
                                                 List<string> CheckBoxName = new List<string>() { "Difference in body weight"," Weight gain from start","Average weight gain","Weight gain from last survey","" +
-                                                "Average weight gain from last survey","Loculus feed intake","Feed Intake Weekly","FeedIntakDaily","Feed Conversion Ratio"};
-                                                for (int i = 1; i < CheckBoxName.Count(); i++)
+                                                 "Average weight gain from last survey","Loculus feed intake","Feed Intake Weekly","FeedIntakDaily","Feed Conversion Ratio"};
+                                                for (int i = 0; i < CheckBoxName.Count; i++)
                                                 {
                                                     <div class="form-check">
                                                         <input class="form-check-input" name="AreChecked" type="checkbox" value="@i" @((char)Model.VisibleProperties[i] == '1' ? "checked" : "") />
                                                         <label class="form-check-label"> @CheckBoxName[i] </label>
-                                                    </div>
-
+                                                    </div>  
                                                 }
                                             }
                                         </div>
