--- a/FermaOnline/Views/Experiment/Show.cshtml
+++ b/FermaOnline/Views/Experiment/Show.cshtml
@@ -376,7 +376,7 @@
     }]
     };
     var config = {
-                type: 'line' ,
+                type: 'bar' ,
                 data: data,
                 options: {
                     title: {
@@ -397,8 +397,11 @@
           var context = document.getElementById('myChart')
    //inicjalizacja chart
    var  chart = new Chart(context,config );
-       
-        chart
+      //Zapewnienie miejsca na bar 
+      chart.destroy();
+      config.type ='line';
+      chart = new Chart(context,config );
+      chart
         //dodawanie dataset 
     const alphabet = ["A","B","C","D","E","F","G","H","I","J","K","L","M","N","O","P","Q","R","S","T","U","V","W","X","Y","Z"];
     for(var i = 0; i < CageNumber; i++){
@@ -410,7 +413,7 @@
         fill: false,
         data: ListOfData[i],
       };
-      chart.data.datasets.push(newDataset);
+      config.data.datasets.push(newDataset);
       chart.update();
     }
       const checkbox = document.getElementById('ChartType');
