--- a/FermaOnline/Views/Survey/Create.cshtml
+++ b/FermaOnline/Views/Survey/Create.cshtml
@@ -42,6 +42,7 @@
                                 <label asp-for="@Model.Cages[i].GroupWeight">@alphabet[count] cage group weight</label>
                                 <div class="col-sm-10">
                                     <input type="number" step="0.01" id="@alphabet[count]Weight" asp-for="@Model.Cages[i].GroupWeight" class="form-control " />
+                                    <span asp-validation-for="Cages[i].GroupWeight" class="text-danger"></span>
                                 </div>
                             </div>
                             count++;
