Repair build, repair show date

--- a/FermaOnline/Views/Experiment/Show.cshtml
+++ b/FermaOnline/Views/Experiment/Show.cshtml
@@ -66,7 +66,7 @@
                                 <th class="first">Data</th>
                                 @foreach (var survey in Model.SurveysList)
                                 {
-                                    <th>@survey.SurveyDate.!?ToString("dd/MM/yyyy")</th>
+                                    <th>@survey.SurveyDate.ToString("dd/MM/yyyy")</th>
                                 }
                             </tr>
                         </thead>
