--- a/FermaOnline/Views/Survey/Delete.cshtml
+++ b/FermaOnline/Views/Survey/Delete.cshtml
@@ -10,7 +10,7 @@
             <div class="col-12">
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="SurveyDate">Are you sure you want to delete survey from @Model.SurveyDate!?.Date?</label>
+                        <label asp-for="SurveyDate">Are you sure you want to delete survey from @Model.SurveyDate.Date</label>
                     </div>
                 </div>
                 <div class="form-group row">
